--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,65 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/buttons_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick='selectFrag'
+            android:text="main" />
+
+        <Button
+            android:id="@+id/button_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick='selectFrag'
+            android:text="map" />
+
+        <Button
+            android:id="@+id/button_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick='selectFrag'
+            android:text="list" />
+
+        <Button
+            android:id="@+id/button_planner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick='selectFrag'
+            android:text="plan" />
+
+        <Button
+            android:id="@+id/button_album"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick='selectFrag'
+            android:text="album" />
+    </LinearLayout>
+
+    <fragment
+        android:id="@+id/fragment_place"
+        android:name="com.example.y.travel_diary.FragmentMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignBottom="@id/buttons_layout"
+        android:layout_alignEnd="@id/buttons_layout"
+        tools:layout="@layout/activity_main" />
 
 </RelativeLayout>
