--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_home"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:onClick="selectFrag"
+        android:text="home"/>
+
     <LinearLayout
         android:id="@+id/buttons_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@id/button_home"
         android:orientation="horizontal">
 
         <Button
@@ -53,11 +61,11 @@
             android:text="album" />
     </LinearLayout>
 
-    <fragment
+    <LinearLayout
         android:id="@+id/fragment_place"
-        android:name="com.example.y.travel_diary.Fragments.FragmentMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_below="@id/buttons_layout"
         tools:layout="@layout/activity_main" />
 
