--- a/app/src/main/res/layout/activity_addnewtravel.xml
+++ b/app/src/main/res/layout/activity_addnewtravel.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <RelativeLayout
+        android:orientation="vertical" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:weightSum="1"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,7 +18,8 @@
         android:textSize="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:hint="Name"/>
+        android:hint="Name"
+        android:padding="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,9 +29,10 @@
         android:layout_below="@+id/NameText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Start date"
+        android:hint="Click and set Start date"
         android:onClick="SdateEdit"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:padding="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,30 +42,33 @@
         android:layout_below="@+id/SdateText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="End date"
+        android:hint="Click and set End date"
         android:onClick="EdateEdit"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:padding="10dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Travel!!"
+        android:text="Create"
+        android:textSize="20dp"
         android:id="@+id/createButton"
+        android:onClick="insertDB"
         android:layout_below="@+id/EdateText"
-        android:layout_toLeftOf="@+id/cancelButton"
-        android:layout_toStartOf="@+id/cancelButton"
-        android:onClick="insertDB"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="70dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel..."
+        android:text="Cancel"
+        android:textSize="20dp"
         android:id="@+id/cancelButton"
-        android:layout_alignTop="@+id/createButton"
+        android:onClick="Cancel"
+        android:layout_below="@+id/EdateText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="69dp"
-        android:layout_marginEnd="69dp"
-        android:onClick="Cancel"/>
-
+        android:layout_marginRight="70dp"/>
+</RelativeLayout>
 </RelativeLayout>
