--- a/app/src/main/res/layout/activity_addnewbucket.xml
+++ b/app/src/main/res/layout/activity_addnewbucket.xml
@@ -11,40 +11,28 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
+        <TextView
+            android:id="@+id/bucket_name_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:padding="10dp"
+            android:textColor="@color/text"
+            android:shadowColor="@color/text_shadow"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
+            android:text="@string/bucket_name"/>
+
         <EditText
+            android:id="@+id/bucket_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/NameText"
+            android:layout_below="@id/bucket_name_textview"
             android:textSize="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:hint="Name"
-            android:padding="10dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/SdateText"
-            android:textSize="30dp"
-            android:layout_below="@+id/NameText"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="Click and set Start date"
-            android:onClick="SdateEdit"
-            android:clickable="true"
-            android:padding="10dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/EdateText"
-            android:textSize="30dp"
-            android:layout_below="@+id/SdateText"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:text="Click and set End date"
-            android:onClick="EdateEdit"
-            android:clickable="true"
             android:padding="10dp"/>
 
         <Button
@@ -52,9 +40,9 @@
             android:layout_height="wrap_content"
             android:text="Create"
             android:textSize="20dp"
-            android:id="@+id/createButton"
-            android:onClick="insertDB"
-            android:layout_below="@+id/EdateText"
+            android:id="@+id/bucket_insert"
+            android:onClick="bucket_insertDB"
+            android:layout_below="@id/bucket_name"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="70dp"/>
@@ -64,9 +52,9 @@
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:textSize="20dp"
-            android:id="@+id/cancelButton"
-            android:onClick="Cancel"
-            android:layout_below="@+id/EdateText"
+            android:id="@+id/buckek_cancel"
+            android:onClick="bucket_cancel"
+            android:layout_below="@id/bucket_name"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="70dp"/>
