--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="text">#cc212121</color>
     <color name="text_shadow">#7F000000</color>
+    <color name="background">#FFEEEEEE</color>
 </resources>
