--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -29,4 +29,17 @@
         android:adjustViewBounds="true"
         android:src="@drawable/new_start"
         android:onClick="gotoAddMap"/>
+
+    <ImageView
+        android:id="@+id/image_my_pos"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_above="@id/image_new_map"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:src="@drawable/gps"/>
 </RelativeLayout>
