--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -3,11 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:text="This is fragment main"
-        android:textStyle="bold"
+    <ListView
+        android:id="@+id/listview_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:focusable="false"
+        android:divider="#00000000"
+        android:background="#00000000"
+        android:cacheColorHint="#00000000"
+        android:listSelector="#00000000"/>
 
 </RelativeLayout>
