--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:onClick="gotoAddBucket"
+        android:onClick="gotoAddActivity"
         android:text="@string/text_new_bucket"/>
 
     <ImageView
