--- a/app/src/main/res/layout/planner_fragment.xml
+++ b/app/src/main/res/layout/planner_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:onClick="gotoAddPlan"
+        android:onClick="gotoAddActivity"
         android:text="새로운 계획을 세우세요!"/>
 
     <ImageView
