--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -41,5 +41,5 @@
         android:padding="0dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:src="@drawable/gps"/>
+        android:src="@drawable/plan"/>
 </RelativeLayout>
