--- a/app/src/main/res/layout/planlist_layout.xml
+++ b/app/src/main/res/layout/planlist_layout.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
         android:id="@+id/linear_one">
         <TextView
             android:layout_width="wrap_content"
@@ -39,6 +40,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/alarmimg"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"/>
 
 </RelativeLayout>
