--- a/app/src/main/res/layout/planner_fragment.xml
+++ b/app/src/main/res/layout/planner_fragment.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:onClick="gotoAddActivity"
-        android:text="새로운 계획을 세우세요!"/>
+        android:text="새로운 plan을 설정해주십시오"/>
 
     <ImageView
         android:id="@+id/image_new_plan"
@@ -28,6 +28,6 @@
         android:padding="0dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:src="@drawable/bucket"
+        android:src="@drawable/plan"
         android:onClick="gotoAddActivity"/>
 </RelativeLayout>
