--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,5 @@
     <color name="text">#cc212121</color>
     <color name="text_shadow">#7F000000</color>
     <color name="background">#FFEEEEEE</color>
+    <color name="theme">#666699</color>
 </resources>
