--- a/app/src/main/res/layout/planner_fragment.xml
+++ b/app/src/main/res/layout/planner_fragment.xml
@@ -32,6 +32,6 @@
         android:padding="0dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:src="@drawable/plan"
+        android:src="@drawable/hours"
         android:onClick="gotoAddActivity"/>
 </RelativeLayout>
