--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -7,7 +7,11 @@
         android:id="@+id/list_travel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:divider="#00000000"
+        android:background="#00000000"
+        android:cacheColorHint="#00000000"
+        android:listSelector="#00000000"/>
 
     <TextView
         android:id="@+id/button_new_start"
