--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -13,8 +13,9 @@
         android:id="@+id/list_map"
         android:layout_below="@id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="wrap_content"
+        android:divider="#00000000"
+        android:background="#00000000"/>
 
     <ImageView
         android:id="@+id/image_new_map"
