--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
-        <shape>
-            <solid android:color="#dddddd" />
-            <corners android:radius="5dp" />
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#22222222" />
+            <corners android:radius="8dp" />
             <!-- <stroke
                 android:width="0.5dp"
                 android:color="#EEE" /> -->
+        </shape>
+    </item>
+
+    <item android:top="1px" android:right="1px" android:left="1px" android:bottom="1px">
+        <shape
+            android:shape="rectangle">
+            <solid android:color="@color/background"/>
+            <corners android:radius="8dp"/>
         </shape>
     </item>
 </layer-list>
