--- a/app/src/main/res/layout/activity_addnewmap.xml
+++ b/app/src/main/res/layout/activity_addnewmap.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/theme">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:layout_margin="5dp">
 
         <EditText
             android:id="@+id/map_query"
@@ -15,17 +17,28 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="검색"
+            android:background="@drawable/customedit"
+            android:padding="10dp"
+
             android:ems="10" >
 
             <requestFocus />
         </EditText>
 
-        <Button
-            android:id="@+id/button_search"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="확인" />
+            android:text="검색"
+            android:textSize="22sp"
+            android:textColor="#FFF"
+            android:textStyle="bold"
+            android:id="@+id/button_search"
+            android:clickable="true"
+            android:layout_marginLeft="5dp"
+            android:padding="8dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:background="@drawable/customtextview"/>
     </LinearLayout>
 
 
