--- a/app/src/main/res/layout/activity_addnewtravel.xml
+++ b/app/src/main/res/layout/activity_addnewtravel.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/theme">
 
     <RelativeLayout
         android:orientation="vertical" android:layout_width="wrap_content"
@@ -11,21 +12,51 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/nt_title"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center_horizontal"
+            android:background="@drawable/customtextview"
+            android:ems="10"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:text="여행 추가하기"
+            android:textColor="#FFFFFFFF"
+            android:padding="10dp"/>
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/NameText"
-            android:textSize="30dp"
-            android:layout_alignParentTop="true"
+            android:textSize="20sp"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/nt_title"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/customedit"
+            android:ems="10"
             android:hint="Name"
             android:padding="10dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/SdateText"
-            android:textSize="30dp"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/customedit"
+            android:ems="10"
             android:layout_below="@+id/NameText"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -35,10 +66,15 @@
             android:padding="10dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/EdateText"
-            android:textSize="30dp"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/customedit"
+            android:ems="10"
             android:layout_below="@+id/SdateText"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -47,28 +83,43 @@
             android:clickable="true"
             android:padding="10dp"/>
 
-        <Button
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Create"
-            android:textSize="20dp"
-            android:id="@+id/createButton"
-            android:onClick="insertDB"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/EdateText"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="70dp"/>
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textSize="20dp"
-            android:id="@+id/cancelButton"
-            android:onClick="Cancel"
-            android:layout_below="@+id/EdateText"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="70dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create"
+                android:textSize="22sp"
+                android:textColor="#FFF"
+                android:textStyle="bold"
+                android:id="@+id/createButton"
+                android:onClick="insertDB"
+                android:clickable="true"
+                android:padding="10dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:background="@drawable/customtextview"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:textColor="#FFF"
+                android:textStyle="bold"
+                android:text="Cancel"
+                android:id="@+id/cancelButton"
+                android:onClick="Cancel"
+                android:clickable="true"
+                android:layout_marginLeft="10dp"
+                android:padding="10dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:background="@drawable/customtextview"/>
+        </LinearLayout>
     </RelativeLayout>
+
 </RelativeLayout>
