--- a/app/src/main/res/layout/planlist_layout.xml
+++ b/app/src/main/res/layout/planlist_layout.xml
@@ -14,7 +14,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
-        android:padding="1dp"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
         android:background="@drawable/background">
         <RelativeLayout
             android:layout_width="wrap_content"
